--- a/.github/workflows/user-guide.yml
+++ b/.github/workflows/user-guide.yml
@@ -28,8 +28,8 @@ jobs:
           override: true
           components: rustfmt, clippy
       
-      # Set up cargo cache
-      - name: Set up cargo cache
+      # Cache Build
+      - name: Cache Build
         uses: actions/cache@v3
         continue-on-error: false
         with:
