--- a/casr/Cargo.toml
+++ b/casr/Cargo.toml
@@ -2,6 +2,14 @@
 name = "iso-20022-casr"
 version = "0.1.0"
 edition = "2021"
+repository = "https://github.com/emergentfinancial/iso-20022"
+authors = ["Ryan Tate <ryan.tate@emergent.financial>"]
+homepage = "https://emergentfinancial.github.io/iso-20022"
+documentation = "https://docs.rs/iso-20022-sdk"
+readme = "../README.md"
+license-file = "../LICENSE.md"
+categories = ["finance"]
+keywords = ["iso20022", "Universal financial industry message scheme", "Settlement Reporting"]
 
 [dependencies]
 chrono = { version = "0.4.24", features = ["serde"] }
