--- a/sdk/Cargo.toml
+++ b/sdk/Cargo.toml
@@ -10,7 +10,7 @@ documentation = "https://docs.rs/iso-20022-sdk"
 readme = "../README.md"
 license-file = "../LICENSE.md"
 categories = ["finance"]
-keywords = ["iso20022", "Universal financial industry message scheme"]
+keywords = ["ISO 20022", "Universal financial industry message scheme"]
 
 [features]
 default = ["msg"]
