update documentation url
Signed-off-by: Ryan Tate <ryan.tate@emergent.financial>

--- a/admi/Cargo.toml
+++ b/admi/Cargo.toml
@@ -6,7 +6,7 @@ repository = "https://github.com/emergentfinancial/iso-20022"
 description = "ISO 20022 Universal Financial Industry Message Scheme Rust SDK"
 authors = ["Ryan Tate <ryan.tate@emergent.financial>"]
 homepage = "https://emergentfinancial.github.io/iso-20022"
-documentation = "https://docs.rs/iso-20022-sdk"
+documentation = "https://docs.rs/iso-20022-admi"
 readme = "../README.md"
 license-file = "../LICENSE.md"
 categories = ["finance"]
