use version number for deps instead of path
Signed-off-by: Ryan Tate <ryan.tate@emergent.financial>

--- a/sdk/Cargo.toml
+++ b/sdk/Cargo.toml
@@ -60,39 +60,39 @@ tsmt = ["iso-20022-tsmt"]
 tsrv = ["iso-20022-tsrv"]
 
 [dependencies]
-iso-20022-nvlp = { path = "../nvlp", optional = true }
-iso-20022-head = { path = "../head", optional = true }
-iso-20022-dsig = { path = "../dsig", optional = true }
-iso-20022-acmt = { path = "../acmt", optional = true }
-iso-20022-admi = { path = "../admi", optional = true }
-iso-20022-auth = { path = "../auth", optional = true }
-iso-20022-caaa = { path = "../caaa", optional = true }
-iso-20022-caad = { path = "../caad", optional = true }
-iso-20022-caam = { path = "../caam", optional = true }
-iso-20022-cafc = { path = "../cafc", optional = true }
-iso-20022-cafm = { path = "../cafm", optional = true }
-iso-20022-cafr = { path = "../cafr", optional = true }
-iso-20022-cain = { path = "../cain", optional = true }
-iso-20022-camt = { path = "../camt", optional = true }
-iso-20022-canm = { path = "../canm", optional = true }
-iso-20022-casp = { path = "../casp", optional = true }
-iso-20022-casr = { path = "../casr", optional = true }
-iso-20022-catm = { path = "../catm", optional = true }
-iso-20022-catp = { path = "../catp", optional = true }
-iso-20022-colr = { path = "../colr", optional = true }
-iso-20022-fxtr = { path = "../fxtr", optional = true }
-iso-20022-pacs = { path = "../pacs", optional = true }
-iso-20022-pain = { path = "../pain", optional = true }
-iso-20022-reda = { path = "../reda", optional = true }
-iso-20022-remt = { path = "../remt", optional = true }
-iso-20022-secl = { path = "../secl", optional = true }
-iso-20022-seev = { path = "../seev", optional = true }
-iso-20022-semt = { path = "../semt", optional = true }
-iso-20022-sese = { path = "../sese", optional = true }
-iso-20022-setr = { path = "../setr", optional = true }
-iso-20022-tsin = { path = "../tsin", optional = true }
-iso-20022-tsmt = { path = "../tsmt", optional = true }
-iso-20022-tsrv = { path = "../tsrv", optional = true }
+iso-20022-nvlp = { version = "0.1.0", optional = true }
+iso-20022-head = { version = "0.1.0", optional = true }
+iso-20022-dsig = { version = "0.1.0", optional = true }
+iso-20022-acmt = { version = "0.1.0", optional = true }
+iso-20022-admi = { version = "0.1.0", optional = true }
+iso-20022-auth = { version = "0.1.0", optional = true }
+iso-20022-caaa = { version = "0.1.0", optional = true }
+iso-20022-caad = { version = "0.1.0", optional = true }
+iso-20022-caam = { version = "0.1.0", optional = true }
+iso-20022-cafc = { version = "0.1.0", optional = true }
+iso-20022-cafm = { version = "0.1.0", optional = true }
+iso-20022-cafr = { version = "0.1.0", optional = true }
+iso-20022-cain = { version = "0.1.0", optional = true }
+iso-20022-camt = { version = "0.1.0", optional = true }
+iso-20022-canm = { version = "0.1.0", optional = true }
+iso-20022-casp = { version = "0.1.0", optional = true }
+iso-20022-casr = { version = "0.1.0", optional = true }
+iso-20022-catm = { version = "0.1.0", optional = true }
+iso-20022-catp = { version = "0.1.0", optional = true }
+iso-20022-colr = { version = "0.1.0", optional = true }
+iso-20022-fxtr = { version = "0.1.0", optional = true }
+iso-20022-pacs = { version = "0.1.0", optional = true }
+iso-20022-pain = { version = "0.1.0", optional = true }
+iso-20022-reda = { version = "0.1.0", optional = true }
+iso-20022-remt = { version = "0.1.0", optional = true }
+iso-20022-secl = { version = "0.1.0", optional = true }
+iso-20022-seev = { version = "0.1.0", optional = true }
+iso-20022-semt = { version = "0.1.0", optional = true }
+iso-20022-sese = { version = "0.1.0", optional = true }
+iso-20022-setr = { version = "0.1.0", optional = true }
+iso-20022-tsin = { version = "0.1.0", optional = true }
+iso-20022-tsmt = { version = "0.1.0", optional = true }
+iso-20022-tsrv = { version = "0.1.0", optional = true }
 chrono = { version = "0.4.24", features = ["serde"] }
 derive_builder = "0.12.0"
 lazy_static = "1.4.0"
