--- a/.github/workflows/user-guide.yml
+++ b/.github/workflows/user-guide.yml
@@ -41,15 +41,15 @@ jobs:
           restore-keys: ${{ runner.os }}-cargo-
       
       # Install plantuml, mdbook & mdbook-plantuml
-      - run: |
-        if [[ $(which mdbook) ]]; then
-            echo "mdbook is already installed, skipping..."
-        else
-            echo "Installing mdbook"
-            sudo apt-get install -y plantuml 
-            cargo install mdbook mdbook-plantuml
-        fi
-        
+      - name: Install plantuml, mdbook & mdbook-plantuml
+        run: |
+          if [[ $(which mdbook) ]]; then
+              echo "mdbook is already installed, skipping..."
+          else
+              echo "Installing mdbook"
+              sudo apt-get install -y plantuml 
+              cargo install mdbook mdbook-plantuml
+          fi
 
       # Build User Guide
       - name: Build User Guide
