--- a/sdk/Cargo.toml
+++ b/sdk/Cargo.toml
@@ -16,7 +16,8 @@ keywords = ["ISO", "20022"]
 default = ["msg"]
 msg = ["nvlp", "head", "crypto"]
 ## Cryptographic Signatures
-crypto = ["dsig", "p256", "signature"]
+crypto = ["dsig", "signature", "const-oid", "ecdsa"]
+ecdsa = ["p256", "elliptic-curve"]
 ## Business Domains
 payments = ["acmt", "auth", "acmt", "admi", "camt", "pacs", "pain", "reda", "remt"]
 securities = ["auth", "acmt", "admi", "camt", "colr", "reda", "semt", "sese", "setr", "seev"]
@@ -62,7 +63,7 @@ tsrv = ["iso-20022-tsrv"]
 [dependencies]
 iso-20022-nvlp = { version = "0.1.0", optional = true }
 iso-20022-head = { version = "0.1.0", optional = true }
-iso-20022-dsig = { version = "0.1.0", optional = true }
+iso-20022-dsig = { version = "0.1.1", optional = true }
 iso-20022-acmt = { version = "0.1.0", optional = true }
 iso-20022-admi = { version = "0.1.0", optional = true }
 iso-20022-auth = { version = "0.1.0", optional = true }
@@ -96,7 +97,7 @@ iso-20022-tsrv = { version = "0.1.0", optional = true }
 chrono = { version = "0.4.24", features = ["serde"] }
 derive_builder = "0.12.0"
 lazy_static = "1.4.0"
-p256 = { version = "0.13.1", optional = true }
+p256 = { version = "0.13.1", optional = true, features = ["arithmetic"] }
 regex = "1.7.3"
 serde = { version = "1.0.159", features = ["derive"] }
 validator = { version = "0.16.0", features = ["derive"] }
@@ -107,4 +108,9 @@ thiserror = "1.0.40"
 sxd-xpath = "0.4.2"
 sxd-document = "0.3.2"
 signature = { version = "2.1.0", optional = true }
+const-oid = { version = "0.9.2", optional = true, features = [ "db" ]}
+uuid = { version = "1.3.3", features = ["v4", "serde"]}
+elliptic-curve = { version = "0.13.4", optional = true, features = ["sec1"] }
+hex = { version = "0.4.3", features = ["serde"] }
+sha2 = "0.10.6"
 
