--- a/sdk/Cargo.toml
+++ b/sdk/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "iso-20022-sdk"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 repository = "https://github.com/emergentfinancial/iso-20022"
 description = "ISO 20022 Universal Financial Industry Message Scheme Rust SDK"
@@ -13,15 +13,49 @@ categories = ["finance", "encoding"]
 keywords = ["ISO", "20022"]
 
 [features]
-default = ["msg"]
+default = ["msg", "pacs"]
 msg = ["nvlp", "head", "crypto"]
 ## Cryptographic Signatures
 crypto = ["dsig", "p256", "signature"]
 ## Business Domains
-payments = ["acmt", "auth", "acmt", "admi", "camt", "pacs", "pain", "reda", "remt"]
-securities = ["auth", "acmt", "admi", "camt", "colr", "reda", "semt", "sese", "setr", "seev"]
+payments = [
+    "acmt",
+    "auth",
+    "acmt",
+    "admi",
+    "camt",
+    "pacs",
+    "pain",
+    "reda",
+    "remt",
+]
+securities = [
+    "auth",
+    "acmt",
+    "admi",
+    "camt",
+    "colr",
+    "reda",
+    "semt",
+    "sese",
+    "setr",
+    "seev",
+]
 trade = ["auth", "tsin", "tsrv", "tsmt"]
-cards = ["caaa", "caam", "catp", "caad", "cafc", "cafm", "cafr", "cain", "canm", "catm", "casp", "casr"]
+cards = [
+    "caaa",
+    "caam",
+    "catp",
+    "caad",
+    "cafc",
+    "cafm",
+    "cafr",
+    "cain",
+    "canm",
+    "catm",
+    "casp",
+    "casr",
+]
 fx = ["admi", "camt", "fxtr", "reda"]
 ## Pre-requisites
 nvlp = ["iso-20022-nvlp"]
@@ -94,17 +128,18 @@ iso-20022-tsin = { version = "0.1.0", optional = true }
 iso-20022-tsmt = { version = "0.1.0", optional = true }
 iso-20022-tsrv = { version = "0.1.0", optional = true }
 chrono = { version = "0.4.24", features = ["serde"] }
-derive_builder = "0.12.0"
+derive_builder = "0.13.0"
 lazy_static = "1.4.0"
 p256 = { version = "0.13.1", optional = true }
 regex = "1.7.3"
 serde = { version = "1.0.159", features = ["derive"] }
 validator = { version = "0.16.0", features = ["derive"] }
 xml-rs = "0.8.4"
-quick-xml = { version = "0.28.1", features = ["serialize"] }
+quick-xml = { version = "0.31.0", features = ["serialize"] }
 format_xml = "0.3.0"
 thiserror = "1.0.40"
 sxd-xpath = "0.4.2"
 sxd-document = "0.3.2"
 signature = { version = "2.1.0", optional = true }
-
+bincode = "1.3.3"
+serde_json = "1.0.113"
