--- a/sdk/Cargo.toml
+++ b/sdk/Cargo.toml
@@ -13,11 +13,11 @@ categories = ["finance", "encoding"]
 keywords = ["ISO", "20022"]
 
 [features]
-default = ["msg"]
+default = ["msg", "pacs"]
 msg = ["nvlp", "head", "crypto"]
 ## Cryptographic Signatures
-crypto = ["dsig", "signature", "const-oid", "ecdsa"]
-ecdsa = ["p256", "elliptic-curve"]
+crypto = ["dsig", "signature", "ecdsa"]
+ecdsa = ["p256", "elliptic-curve", "rand_core"]
 ## Business Domains
 payments = ["acmt", "auth", "acmt", "admi", "camt", "pacs", "pain", "reda", "remt"]
 securities = ["auth", "acmt", "admi", "camt", "colr", "reda", "semt", "sese", "setr", "seev"]
@@ -97,7 +97,7 @@ iso-20022-tsrv = { version = "0.1.0", optional = true }
 chrono = { version = "0.4.24", features = ["serde"] }
 derive_builder = "0.12.0"
 lazy_static = "1.4.0"
-p256 = { version = "0.13.1", optional = true, features = ["arithmetic"] }
+p256 = { version = "0.13.1", optional = true, features = ["arithmetic", "alloc", "pem", "pkcs8"] }
 regex = "1.7.3"
 serde = { version = "1.0.159", features = ["derive"] }
 validator = { version = "0.16.0", features = ["derive"] }
@@ -108,9 +108,11 @@ thiserror = "1.0.40"
 sxd-xpath = "0.4.2"
 sxd-document = "0.3.2"
 signature = { version = "2.1.0", optional = true }
-const-oid = { version = "0.9.2", optional = true, features = [ "db" ]}
 uuid = { version = "1.3.3", features = ["v4", "serde"]}
-elliptic-curve = { version = "0.13.4", optional = true, features = ["sec1"] }
+elliptic-curve = { version = "0.13.4", optional = true, features = ["sec1", "alloc"] }
 hex = { version = "0.4.3", features = ["serde"] }
 sha2 = "0.10.6"
+base64 = "0.21.0"
+rand_core = { version = "0.6.4", optional = true, features = ["getrandom"] }
+der = "0.7.6"
 
